--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <h1>AluraBook</h1>
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="Favoritos.svg" alt="Meus favoritos"></a alt="Meus favoritos"></a>
+        <a href="#"><img src="Compras.png" alt="Carrinho de compras"></a alt="Carrinho de compras"></a>
+        <a href="#"><img src="Usuario.png" alt="Meu perfil"></a alt="Meu perfil"></a>
+    </header>
 </body>
 </html>
